@@ -1,5 +1,6 @@
 Revision history for DBIx::Class
 
+        - rename DBIX_CLASS_STORAGE_DBI_DEBUG to DBIC_TRACE
         - rename _parent_rs to _parent_source in ResultSet
 
 0.06999_05 2006-07-04 14:40:01
